--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -19,7 +19,7 @@ RUN go mod download
 COPY . .
 
 # 将我们的代码编译成二进制可执行文件 bubble
-RUN go build -o captcha .
+RUN go build -o web .
 
 ###################
 # 接下来创建一个小镜像
@@ -27,10 +27,10 @@ RUN go build -o captcha .
 FROM scratch
 
 COPY ./conf /conf
-COPY ./img /img
+COPY ./view /view
 
 # 从builder镜像中把/dist/app 拷贝到当前目录
-COPY --from=builder /build/captcha /
+COPY --from=builder /build/web /
 
 # 需要运行的命令
-ENTRYPOINT ["/captcha", "conf/config.yaml"]
+ENTRYPOINT ["/web", "conf/config.yaml"]
